force-app/main/default/objects/Historical_Data__c/fields/Sight__c.field-meta.xml
<CustomField>
    <fullName>Sight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sight</label>
    <type>Checkbox</type>
</CustomField>