force-app/main/default/objects/Historical_Data__c/fields/Skull_Fracture__c.field-meta.xml
<CustomField>
    <fullName>Skull_Fracture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skull Fracture</label>
    <type>Checkbox</type>
</CustomField>