force-app/main/default/objects/Historical_Data__c/fields/Speech__c.field-meta.xml
<CustomField>
    <fullName>Speech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speech</label>
    <type>Checkbox</type>
</CustomField>