force-app/main/default/objects/Historical_Data__c/fields/Strains_Sprains_Ligament_Tears__c.field-meta.xml
<CustomField>
    <fullName>Strains_Sprains_Ligament_Tears__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strains / Sprains / Ligament Tears</label>
    <type>Checkbox</type>
</CustomField>