force-app/main/default/objects/Historical_Data__c/fields/Substantiated_Brain_Injury__c.field-meta.xml
<CustomField>
    <fullName>Substantiated_Brain_Injury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Substantiated Brain Injury</label>
    <type>Checkbox</type>
</CustomField>