force-app/main/default/objects/Historical_Data__c/fields/Surgery_Required_as_a_result_of_accide__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Required_as_a_result_of_accide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surgery Required - as a result of accide</label>
    <type>Checkbox</type>
</CustomField>