force-app/main/default/objects/Historical_Data__c/fields/Taste_Smell__c.field-meta.xml
<CustomField>
    <fullName>Taste_Smell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taste &amp; Smell</label>
    <type>Checkbox</type>
</CustomField>