force-app/main/default/objects/Historical_Data__c/fields/Teeth__c.field-meta.xml
<CustomField>
    <fullName>Teeth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teeth</label>
    <type>Checkbox</type>
</CustomField>