force-app/main/default/objects/Historical_Data__c/fields/Total_current_value_of_assignments_Amoun__c.field-meta.xml
<CustomField>
    <fullName>Total_current_value_of_assignments_Amoun__c</fullName>
    <label>Total current value of assignments Amoun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>