force-app/main/default/objects/Historical_Data__c/fields/TotalCurrentValueOfAssignmentsLender__c.field-meta.xml
<CustomField>
    <fullName>TotalCurrentValueOfAssignmentsLender__c</fullName>
    <label>Total current value of assignments Lend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>