force-app/main/default/objects/Historical_Data__c/fields/Treating_Physician__c.field-meta.xml
<CustomField>
    <fullName>Treating_Physician__c</fullName>
    <label>Treating Physician</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, and avaliable on request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>