force-app/main/default/objects/Historical_Data__c/fields/Type_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Accident__c</fullName>
    <label>Type of Accident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collision - 2 Vehicles</fullName>
            </value>
            <value>
                <fullName>Collision - More than 2</fullName>
            </value>
            <value>
                <fullName>Rollover</fullName>
            </value>
            <value>
                <fullName>Loss of Control</fullName>
            </value>
            <value>
                <fullName>Pedestrian Struck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>