force-app/main/default/objects/Historical_Data__c/fields/Type_of_Accident_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Accident_Confirmed__c</fullName>
    <label>Type of Accident Confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>I Can&apos;t Confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>