force-app/main/default/objects/Historical_Data__c/fields/When_did_the_CLAIMANT_first_seek_medical__c.field-meta.xml
<CustomField>
    <fullName>When_did_the_CLAIMANT_first_seek_medical__c</fullName>
    <description>When did the CLAIMANT first seek medical attention?</description>
    <label>When did the CLAIMANT first seek medical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same day</fullName>
            </value>
            <value>
                <fullName>Next Day</fullName>
            </value>
            <value>
                <fullName>Later that week</fullName>
            </value>
            <value>
                <fullName>Within a month</fullName>
            </value>
            <value>
                <fullName>Over a month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>