force-app/main/default/objects/Historical_Data__c/fields/When_did_you_first_seek_medical_attentio__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_first_seek_medical_attentio__c</fullName>
    <label>When did you first seek medical attentio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same day</fullName>
            </value>
            <value>
                <fullName>Next Day</fullName>
            </value>
            <value>
                <fullName>Later that week</fullName>
            </value>
            <value>
                <fullName>Within a month</fullName>
            </value>
            <value>
                <fullName>Over a month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>