force-app/main/default/objects/Historical_Data__c/fields/When_was_this_file_opened_at_your_firm__c.field-meta.xml
<CustomField>
    <fullName>When_was_this_file_opened_at_your_firm__c</fullName>
    <label>When was this file opened at your firm?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 1 Month</fullName>
            </value>
            <value>
                <fullName>1 to 2 Months</fullName>
            </value>
            <value>
                <fullName>3 to 5 Months</fullName>
            </value>
            <value>
                <fullName>6 to 23 Months</fullName>
            </value>
            <value>
                <fullName>24 to 47 Months</fullName>
            </value>
            <value>
                <fullName>&gt; 48 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>