force-app/main/default/objects/Historical_Data__c/fields/Who_got_the_Police_Traffice_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Who_got_the_Police_Traffice_Ticket__c</fullName>
    <label>Who got the Police Traffice Ticket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver of the car that hit you</fullName>
            </value>
            <value>
                <fullName>You (Claimant)</fullName>
            </value>
            <value>
                <fullName>Driver of car that you were in</fullName>
            </value>
            <value>
                <fullName>No one</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>